force-app/main/default/objects/Rule_Override__c/Rule_Override__c.object-meta.xml
<CustomObject>
    <description>Runtime configuration records that allow admins to suppress, override, or downgrade validation rules per permission set — without requiring a metadata deployment.</description>
    <label>Rule Override</label>
    <nameField>
        <displayFormat>RO-{0000}</displayFormat>
        <label>Rule Override Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Overrides</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>