force-app/main/default/objects/Rule_Override__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <description>Optional expiry date. If set, this override is ignored by the validation engine after this date, automatically reinstating the original rule behavior.</description>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>