force-app/main/default/objects/Rule_Override__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, this override record is ignored by the validation engine. Use to temporarily disable an override without deleting it.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>