force-app/main/default/objects/Rule_Override__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Admin-facing free-text rationale explaining why this override was created. Used for audit and governance purposes.</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>