force-app/main/default/objects/Rule_Override__c/fields/Override_Action__c.field-meta.xml
<CustomField>
    <fullName>Override_Action__c</fullName>
    <description>How this override modifies the rule: Suppress skips the rule entirely, Override_Message runs the rule with a custom error message, Downgrade_To_Warning fires the rule as a UI-only warning without blocking save.</description>
    <label>Override Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suppress</fullName>
            </value>
            <value>
                <fullName>Override_Message</fullName>
                <label>Override Message</label>
            </value>
            <value>
                <fullName>Downgrade_To_Warning</fullName>
                <label>Downgrade to Warning</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>