force-app/main/default/objects/Rule_Override__c/fields/Override_Message__c.field-meta.xml
<CustomField>
    <fullName>Override_Message__c</fullName>
    <description>Custom error or warning message to display instead of the default rule message. Only used when Override Action is Override Message.</description>
    <label>Override Message</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>