force-app/main/default/objects/Rule_Override__c/fields/Permission_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Name__c</fullName>
    <description>API name of the permission set this override applies to (e.g., Drug_Product_Admin). Users with this permission set will have the override applied.</description>
    <label>Permission Set Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>