force-app/main/default/objects/Rule_Override__c/fields/Validation_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule_Name__c</fullName>
    <description>DeveloperName of the Validation_Rule__mdt record this override targets (e.g., Approved_Requires_FDA_Date)</description>
    <label>Validation Rule Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>